Fix dashboard items date wrapping

--- a/src/app/dashboard/items/items-list.scss
+++ b/src/app/dashboard/items/items-list.scss
@@ -8,8 +8,15 @@
 		}
 
 		.item-col-date {
-			text-align: right;
+			text-align: right;	
 		}
+
+		@include media(xl) {
+			.item-col-date {
+				flex-grow: $item-list-col-grow + 1;	
+			}
+		}
+
 
 		// Large mobile view
 
